# ComfyUI_Simple_Ollama

./: README.md  __init__.py  nodes.py  pyproject.toml
example_workflows/: example.json
web/js/: ollama_node.js
