[project]
name = "comfyui-simple-ollama"
description = "A simple, robust node for talking to any Ollama server (local or LAN) from ComfyUI. Vision, thinking mode, auto model discovery."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_Simple_Ollama"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "ComfyUI_Simple_Ollama"
Icon = ""
