[project]
name = "comfyui-simple-ollama"
description = "A simple, robust node for talking to any Ollama server (local or LAN) from ComfyUI. Vision, IMAGE-batch support, thinking mode, auto model discovery."
version = "1.1.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/a-und-b/ComfyUI_Simple_Ollama"
Documentation = "https://github.com/a-und-b/ComfyUI_Simple_Ollama/blob/main/README.md"
"Bug Tracker" = "https://github.com/a-und-b/ComfyUI_Simple_Ollama/issues"

[tool.comfy]
PublisherId = "a-und-b"
DisplayName = "ComfyUI_Simple_Ollama"
Icon = ""
